--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ h1 {
   margin-block-start: 0;
   margin-block-end: 0;
   padding: 0.5em;
+  font-weight: bold;
 }
 
 ul {
@@ -21,10 +22,18 @@ li {
   list-style:none;
 }
 
+a {
+  color: #2274A5;
+}
+
+a:hover {
+  color: #123F5A;
+}
+
 .btn {
   background-color: #981a57;
   border-color: #981a57;
-  font-size: 1.2em;
+  font-size: 3vh;
 }
 
 .btn:hover {
@@ -38,13 +47,14 @@ li {
   'wght' 400,
   'GRAD' 0,
   'opsz' 24;
-  font-size: 2em;
-  padding: 0.2em;
+  font-size: 4vh;
+  padding: 0.4vh;
 }
 
 .row {
   display: flex;
   margin: 0.5em;
+  justify-content: center;
 }
 
 /*
@@ -57,9 +67,10 @@ li {
   color: #981a57;
 }
 
-.art1, .skills-box, .resume-box, .contact-box, .hack-box, .image-box {
+.art1, .skills-box, .resume-box, .contact-box, .hack-box {
   height: 35vh;
   width: 56vh;
+  overflow: hidden;
 }
 
 .art1 {
@@ -105,18 +116,21 @@ li {
   background-image: url('/image_box.svg');
   margin-left: -1vh;
   margin-right: -1vh;
+  height: 35vh;
+  width: 56vh;
 }
 
 /*
 ** Box Titles
 */
 .skills-box-title, .contact-box-title {
-  font-size: 1.6em;
+  font-size: 3vh;
   font-weight: bold;
   align-content: center;
   padding-top: 1%;
   padding-bottom: 1%;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 .skills-box-title {
@@ -137,7 +151,7 @@ li {
 ** Box Text
 */
 .skills-box-text, .hack-box-text, .resume-box-text {
-  font-size: 1.2em;
+  font-size: 2.4vh;
   margin: 0 auto;
 }
 
@@ -149,25 +163,25 @@ li {
 }
 
 .hack-box-text {
-  padding-left: 3.5em;
-  padding-right: 3.25em;
-  padding-top: 3.5em;
-  padding-bottom: 3.5em;
+  padding-left: 5vh;
+  padding-right: 6.5vh;
+  padding-top: 5.5vh;
+  padding-bottom: 5vh;
 }
 
 .resume-box-text {
   padding-left: 6em;
   padding-right: 7.5em;
-  padding-top: 3.5em;
-  padding-bottom: 3em;
+  padding-top: 7vh;
+  padding-bottom: 7vh;
 }
 
 /*
 ** Lists
 */
 .contact-box-list {
-  padding-left: 4.5em;
-  padding-right: 5.5em;
+  padding-left: 9vh;
+  padding-right: 10vh;
   padding-top: 1em;
   padding-bottom: 2em;
 }
@@ -179,7 +193,7 @@ li {
   background-color: #ffb9da;
   border-color: #ffb9da;
   color: #981a57;
-  font-size: 1.2em;
+  font-size: 2.4vh;
   padding: 0;
 }
 
