--- a/src/App.css
+++ b/src/App.css
@@ -158,8 +158,8 @@ a:hover {
 .skills-box-text {
   padding-left: 1.5em;
   padding-right: 2.3em;
-  padding-top: 2em;
-  padding-bottom: 2em;
+  padding-top: 2.5vh;
+  padding-bottom: 4vh;
 }
 
 .hack-box-text {
@@ -170,10 +170,10 @@ a:hover {
 }
 
 .resume-box-text {
-  padding-left: 6em;
-  padding-right: 7.5em;
-  padding-top: 7vh;
-  padding-bottom: 7vh;
+  padding-left: 9vh;
+  padding-right: 15vh;
+  padding-top: 4vh;
+  padding-bottom: 5vh;
 }
 
 /*
@@ -197,6 +197,6 @@ a:hover {
   padding: 0;
 }
 
-.hack-box-list-item {
+.hack-box-list-item, .resume-box-list-item {
   margin: 0.5em;
 }
